--- a/package.json
+++ b/package.json
@@ -38,34 +38,34 @@
 		"svelte": "^5.0.0"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^3.2.3",
-		"@eslint/compat": "^1.2.3",
-		"@eslint/js": "^9.17.0",
-		"@playwright/test": "^1.45.3",
-		"@storybook/addon-essentials": "^8.4.7",
-		"@storybook/addon-interactions": "^8.4.7",
-		"@storybook/addon-svelte-csf": "^5.0.0-next.21",
-		"@storybook/blocks": "^8.4.7",
-		"@storybook/svelte": "^8.4.7",
-		"@storybook/sveltekit": "^8.4.7",
-		"@storybook/test": "^8.4.7",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@chromatic-com/storybook": "^3.2.4",
+		"@eslint/compat": "^1.2.6",
+		"@eslint/js": "^9.19.0",
+		"@playwright/test": "^1.50.1",
+		"@storybook/addon-essentials": "^8.5.3",
+		"@storybook/addon-interactions": "^8.5.3",
+		"@storybook/addon-svelte-csf": "5.0.0-next.23",
+		"@storybook/blocks": "^8.5.3",
+		"@storybook/svelte": "^8.5.3",
+		"@storybook/sveltekit": "^8.5.3",
+		"@storybook/test": "^8.5.3",
+		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/package": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"eslint": "^9.7.0",
+		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/package": "^2.3.9",
+		"@sveltejs/vite-plugin-svelte": "^4.0.4",
+		"eslint": "^9.19.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
-		"prettier": "^3.3.2",
-		"prettier-plugin-svelte": "^3.2.6",
-		"publint": "^0.2.0",
-		"storybook": "^8.4.7",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.0.0",
-		"vite": "^5.4.11",
-		"vitest": "^2.0.4"
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.14.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"publint": "^0.2.12",
+		"storybook": "^8.5.3",
+		"svelte": "^5.19.6",
+		"svelte-check": "^4.1.4",
+		"typescript": "^5.7.3",
+		"vite": "^5.4.14",
+		"vitest": "^2.1.8"
 	}
 }
