--- a/package.json
+++ b/package.json
@@ -1,76 +1,90 @@
 {
-	"name": "svelte-magic-scroller",
-	"version": "0.1.8",
-	"license": "MIT",
-	"repository": "git+https://github.com/fong/svelte-magic-scroller.git",
-	"homepage": "https://svelte-magic-scroller.pages.dev/",
-	"keywords": ["svelte", "infinite", "virtual", "scroll"],
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build && npm run package",
-		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "npm run package",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"test:e2e": "playwright test",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
-	},
-	"files": [
-		"dist",
-		"!dist/**/*.test.*",
-		"!dist/**/*.spec.*",
-		"!dist/**/*.md"
-	],
-	"sideEffects": [
-		"**/*.css"
-	],
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"type": "module",
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		}
-	},
-	"peerDependencies": {
-		"svelte": "^5.0.0"
-	},
-	"devDependencies": {
-		"@chromatic-com/storybook": "^3.2.4",
-		"@eslint/compat": "^1.2.6",
-		"@eslint/js": "^9.19.0",
-		"@playwright/test": "^1.50.1",
-		"@storybook/addon-essentials": "^8.5.3",
-		"@storybook/addon-interactions": "^8.5.3",
-		"@storybook/addon-svelte-csf": "5.0.0-next.23",
-		"@storybook/blocks": "^8.5.3",
-		"@storybook/svelte": "^8.5.3",
-		"@storybook/sveltekit": "^8.5.3",
-		"@storybook/test": "^8.5.3",
-		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/adapter-static": "^3.0.8",
-		"@sveltejs/kit": "^2.16.1",
-		"@sveltejs/package": "^2.3.9",
-		"@sveltejs/vite-plugin-svelte": "^4.0.4",
-		"eslint": "^9.19.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"publint": "^0.2.12",
-		"storybook": "^8.5.3",
-		"svelte": "^5.19.6",
-		"svelte-check": "^4.1.4",
-		"typescript": "^5.7.3",
-		"vite": "^5.4.14",
-		"vitest": "^2.1.8"
-	}
+    "name": "svelte-magic-scroller",
+    "version": "0.1.8",
+    "license": "MIT",
+    "repository": "https://github.com/fong/svelte-magic-scroller",
+    "homepage": "https://svelte-magic-scroller.pages.dev/",
+    "keywords": [
+        "svelte",
+        "infinite",
+        "virtual",
+        "scroll"
+    ],
+    "title": "Svelte Magic Scroller",
+    "url": "https://svelte-magic-scroller.pages.dev",
+    "description": "This package is a virtualized scroller which enables the scrolling of unlimited items of unknown dimensions. Only items in the vicinity of the current viewport are rendered.  Works best for super large lists like an activity feed or photo gallery.",
+    "npm": "svelte-magic-scroller",
+    "categories": [
+        "ui-components",
+        "user-interaction",
+        "styling-and-layout"
+    ],
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build && npm run package",
+        "preview": "vite preview",
+        "package": "svelte-kit sync && svelte-package && publint",
+        "prepublishOnly": "npm run package",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+        "format": "prettier --write .",
+        "lint": "prettier --check . && eslint .",
+        "test:unit": "vitest",
+        "test": "npm run test:unit -- --run && npm run test:e2e",
+        "test:e2e": "playwright test",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
+    },
+    "files": [
+        "dist",
+        "!dist/**/*.test.*",
+        "!dist/**/*.spec.*",
+        "!dist/**/*.md"
+    ],
+    "sideEffects": [
+        "**/*.css"
+    ],
+    "svelte": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "type": "module",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "svelte": "./dist/index.js"
+        }
+    },
+    "peerDependencies": {
+        "svelte": "^5.0.0"
+    },
+    "devDependencies": {
+        "@chromatic-com/storybook": "^3.2.4",
+        "@eslint/compat": "^1.2.6",
+        "@eslint/js": "^9.19.0",
+        "@playwright/test": "^1.50.1",
+        "@storybook/addon-essentials": "^8.5.3",
+        "@storybook/addon-interactions": "^8.5.3",
+        "@storybook/addon-svelte-csf": "5.0.0-next.23",
+        "@storybook/blocks": "^8.5.3",
+        "@storybook/svelte": "^8.5.3",
+        "@storybook/sveltekit": "^8.5.3",
+        "@storybook/test": "^8.5.3",
+        "@sveltejs/adapter-auto": "^3.3.1",
+        "@sveltejs/adapter-static": "^3.0.8",
+        "@sveltejs/kit": "^2.16.1",
+        "@sveltejs/package": "^2.3.9",
+        "@sveltejs/vite-plugin-svelte": "^4.0.4",
+        "eslint": "^9.19.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-svelte": "^2.46.1",
+        "globals": "^15.14.0",
+        "prettier": "^3.4.2",
+        "prettier-plugin-svelte": "^3.3.3",
+        "publint": "^0.2.12",
+        "storybook": "^8.5.3",
+        "svelte": "^5.19.6",
+        "svelte-check": "^4.1.4",
+        "typescript": "^5.7.3",
+        "vite": "^5.4.14",
+        "vitest": "^2.1.8"
+    }
 }
